# MiniAiCrm

./: .env.example  .gitignore  00-轻量版总体路线图.md  00-阶段零-Codex快速开发准备.md  01-阶段一-飞书多维表格数据底座.md  02-阶段二-统一CodexAgent后端与飞书接入.md  03-阶段三-三个核心闭环MVP.md  04-阶段四-周报提醒与经营看板.md  05-阶段五-权限治理推广与升级边界.md  06-Base扩展性与复杂文档处理方案.md  07-2026-07-15-CodexCLI自主开发Demo计划.md  08-Demo后CodexCLI持续开发计划.md  AGENTS.md  PROMPT-CODEX-EXEC-DEMO.md  PROMPT-CODEX-EXEC-POST-DEMO.md  README.md
.codebase-memory/: artifact.json  graph.db.zst
.planning/: .active_plan
.planning/demo-2026-07-15/: findings.md  progress.md  task_plan.md
.planning/post-demo-mvp/: findings.md  progress.md  task_plan.md
agent-backend/: .env.example  README.md  pyproject.toml
agent-backend/app/: config.py  logging.py  main.py
agent-backend/app/api/: routes.py  schemas.py
agent-backend/app/application/: dashboard_service.py  demo_service.py  intake_service.py  permission_service.py  proposal_service.py  question_service.py
agent-backend/app/demo/: app.js  index.html  styles.css
agent-backend/app/domain/: enums.py  errors.py  models.py
agent-backend/app/infrastructure/: demo_extractor.py  extractor_provider.py  fake_feishu_gateway.py  sqlite_repository.py
agent-backend/app/ports/: extractor.py  repository.py
agent-backend/docs/: DEMO-RUNBOOK.md  KNOWN-LIMITATIONS.md
agent-backend/scripts/: bootstrap.sh  run_demo.sh  smoke_demo.py
agent-backend/tests/: conftest.py  test_dashboard.py  test_feishu_replay.py  test_health.py  test_material_flow.py  test_permissions.py  test_progress_flow.py  test_question_flow.py
